<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="action_delete_one">Delete</string>
    <string name="no_birthday_data">No birthday records found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_today_birthday">Today birthdays</string>
    <string name="tab_title_contact">Contact</string>
    <string name="title_activity_add_birthday">Add Birthday</string>
    <string name="add_birthday_name">Name</string>
    <string name="add_birthday_date">Birthday</string>
    <string name="add_birthday_notification">Show Notification</string>
    <string name="birthday_countdown">Birthday</string>
    <string name="birthday_left">left</string>
    <string name="birthday_ago">ago</string>
    <string name="title_activity_view_birthday">ViewBirthdayActivity</string>
    <string name="title_activity_edit_birthday">Edit Birthday</string>
    <string name="dialog_copy_text">Copy text</string>
    <string name="dialog_message">Do you want to delete this entry?</string>
    <string name="dialog_title">Delete This Entry</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="inserted">Record inserted</string>
    <string name="updated">Record updated</string>
    <string name="db_error">Update error</string>
    <string name="btn_ok">OK</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="warning_message_no_fillup">Please fill up all info</string>
    <string name="warning_message_no_fullup_date">Please fill up the date</string>
    <string name="progress_dialog_uploading">"Uploading</string>
    <string name="no_network">Network unavailable</string>
    <string name="copied_success">Copied to clipboard</string>
    <string name="notification_title">Today bithdays</string>
    <string name="notification_content">You have %d friend(s) birthday today.</string>
</resources>